--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FCC Piano</title>
+    <title>FCC Piano - mobile friendly</title>
 </head>
 <body>
     <div class="piano" id="piano">
